Fixed grid spacing on index page

--- a/chamber/css/mobile.css
+++ b/chamber/css/mobile.css
@@ -27,7 +27,7 @@ h1, h2, h3, h4, h5, h6 {
     grid-column-gap: 1em;
     grid-row-gap: 1em;
     grid-template-columns: 100%;
-    grid-template-rows: 10em 10em 10em 10em 20em;
+    grid-template-rows: repeat(5, 10em);
     margin-top: 1em;
 }
 
@@ -91,6 +91,7 @@ h1, h2, h3, h4, h5, h6 {
 .main__spotlight .main__box {
     width: 93%;
     height: 93%;
+    grid-row: span 2;
     margin: auto;
 }
 
